--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
                             <p> JavaScript </p>
                         </div>
                         <div class="col-lg-6 col-sm-6 col-xs-6">
+                            <img src="docs/tslogo.png" alt="JavaScript-logo">
+                            <p> TypeScript </p>
+                        </div>
+                        <div class="col-lg-6 col-sm-6 col-xs-6">
                             <img src="docs/html-colour-icon.ico" alt="HTML5-logo">
                             <p> HTML5</p>
                         </div>
@@ -119,6 +123,10 @@
                             <div class="col-lg-6 col-sm-6 col-xs-6">
                                 <img src="docs/react-colour-icon.png" alt="React-logo">
                                 <p> React.js </p>
+                            </div>
+                            <div class="col-lg-6 col-sm-6 col-xs-6">
+                                <img src="docs/icons8-angularjs-48.png" alt="React-logo">
+                                <p> Angular </p>
                             </div>
                             <div class="col-lg-6 col-sm-6 col-xs-6">
                                 <img src="docs/nodejs-colour-icon.png" alt="Node-logo">
@@ -150,9 +158,14 @@
                                     <p> PostgresQL </p>
                                 </div>
                                 <div class="col-lg-6 col-sm-6 col-xs-6">
-                                    <img src="docs/mongodb-color-icon.png" alt="mongo-db-logo">
-                                    <p> Mongo </p>
+                                    <img src="docs/hasuragraphql.png" alt="mongo-db-logo">
+                                    <p> Hasura GraphQL </p>
                                 </div>
+                                <div class="col-lg-6 col-sm-6 col-xs-6">
+                                    <img src="docs/mongodb-color-icon.png" alt="mongo-db-logo">
+                                    <p> Mongo DB </p>
+                                </div>
+
                                 <div class="col-lg-6 col-sm-6 col-xs-6">
                                         <img src="docs/heroku-colour-icon.png" alt="mongo-db-logo">
                                         <p> Heroku </p>
@@ -219,6 +232,22 @@
                     <p>
                         A two sided market place where users buy and sell "Mystery Boxes".
                         <a href="https://github.com/Joshua-Tu/rails_team_project">
+                            <p>
+                                GitHub Repo
+                            </p>
+                        </a>
+                    </p>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                    <h4>Sydney Dog Training</h4>
+                    <a href="http://react-keep-static.s3-website-ap-southeast-2.amazonaws.com/" target="_blank">
+                        <img src="docs/dogotraining.svg" class="project-images" />
+                    </a>
+
+                    <p class="techstack">M.E.R.N, HTML, CSS, AWS and Heroku</p>
+                    <p>
+                        A website providing information on dog training services and information utilising direct contact from potential client to customer.
+                        <a href="https://github.com/keshibat/dogtrain_react">
                             <p>
                                 GitHub Repo
                             </p>
