fix instagram link, add github repo to projects

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                       Social Media
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="https://www.instagram.com/mr.nmorales/" target="_blank">Instagram </a>
+                      <a class="dropdown-item" href="https://www.instagram.com/_nmorales/" target="_blank">Instagram </a>
                       <a class="dropdown-item" href="https://medium.com/@nathanielmorales01" target="_blank">Medium</a>
                     </div>
                   </li>
@@ -201,6 +201,11 @@
                     <p>
                         This terminal application was built using Ruby to be run inside the terminal. 
                         It's a choice based game with further applications for education or job training.
+                        <a href="https://github.com/moralesn1/terminalchoicesgame">
+                            <p>
+                                GitHub Repo
+                            </p>
+                        </a>
                     </p>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
@@ -213,6 +218,11 @@
                     <p>
                         This project was aimed at developing my css skills as well as demonstrating
                         my minimalist approach when it comes to designs.
+                        <a href="https://github.com/moralesn1/CSS-Zen-Garden">
+                            <p>
+                                GitHub Repo
+                            </p>
+                        </a>
                     </p>  
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
